# cyberforge-lab

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml  scenario_proposal.yml
.github/workflows/: ci.yml
cli/cyberforge/: __init__.py  main.py
cli/cyberforge/ai_adapters/: __init__.py  base.py  claude_adapter.py  codex_adapter.py
cli/cyberforge/commands/: __init__.py  ai.py  doctor.py  down.py  init.py  report.py  status.py  up.py
cli/cyberforge/orchestrator/: __init__.py  docker_compose.py  reporting.py  scenario_loader.py  workspace.py
cli/cyberforge/safety/: __init__.py  policy.py  validators.py
docs/: ai-integration.md  architecture.md  development-guide.md  ethical-use-policy.md  roadmap.md  scenario-format.md
scenarios/northbridge-retail-group/nrg-staffhub-001/: README.md  docker-compose.yml  report-template.md  scenario.yml
scenarios/northbridge-retail-group/nrg-staffhub-001/app/: Dockerfile  database.py  main.py  models.py  seed.py
scenarios/northbridge-retail-group/nrg-staffhub-001/app/templates/: dashboard.html  login.html  profile.html
templates/: finding-template.md  incident-report-template.md
tests/: test_ai_adapters.py  test_docker_compose.py  test_report_workflow.py  test_safety_policy.py  test_scenario_loader.py
